--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -20,5 +20,38 @@
   "createStore": "Create Store",
   "storeManagement": "Store Management",
   "noTransactionYet": "No transaction yet",
-  "profile": "Profile"
+  "profile": "Profile",
+  "pleaseEnter": "Please enter",
+  "enter": "enter",
+  "owner": "Owner",
+  "group": "Group",
+  "amount": "Amount",
+  "active": "Active",
+  "inactive": "Inactive",
+  "create": "Create",
+  "edit": "Edit",
+  "delete": "Delete",
+  "createSuccessfully": "Create Successfully",
+  "editSuccessfully": "Edit Successfully",
+  "deleteSuccessfully": "Delete Successfully",
+  "search": "Search...",
+  "date": "Date",
+  "storeId": "StoreID",
+  "stallId": "StallID",
+  "status": "Status",
+  "note": "Note",
+  "phoneMinLength6": "Phone must be at least 6 characters long.",
+  "phoneMinLength9": "Phone must be at least 9 characters long.",
+  "change": "Change",
+  "changePassword": "Change Password",
+  "logout": "Logout",
+  "customerSince": "Customer since",
+  "choose": "Choose",
+  "image": "Image",
+  "save": "Save",
+  "cancel": "Cancel",
+  "confirmDelete": "Confirm Delete",
+  "deleteDescription": "Are you sure you want to delete this item?",
+  "khSpace": " "
+
 }
