--- a/lib/l10n/app_km.arb
+++ b/lib/l10n/app_km.arb
@@ -20,5 +20,37 @@
   "createStore": "បង្កើតហាង",
   "storeManagement": "ការគ្រប់គ្រងហាង",
   "noTransactionYet": "មិនមានប្រតិបត្តិការណ៍នៅឡើយទេ",
-  "profile": "ប្រវត្តិរូប"
+  "profile": "ប្រវត្តិរូប",
+  "pleaseEnter": "សូមបញ្ចូល",
+  "enter": "បញ្ចូល",
+  "owner": "ម្ចាស់",
+  "group": "ក្រុម",
+  "amount": "ចំនួនទឹកប្រាក់",
+  "active": "សកម្ម",
+  "inactive": "អសកម្ម",
+  "create": "បង្កើត",
+  "edit": "កែប្រែ",
+  "delete": "លុប",
+  "createSuccessfully": "បង្កើតបានជោគជ័យ",
+  "editSuccessfully": "កែប្រែបានជោគជ័យ",
+  "deleteSuccessfully": "លុបបានជោគជ័យ",
+  "search": "ស្វែងរក...",
+  "date": "កាលបរិច្ឆេទ",
+  "storeId": "លេខសម្គាល់ហាង",
+  "stallId": "លេខសម្គាល់តូប",
+  "status": "ស្ថានភាព",
+  "note": "ចំណាំ",
+  "phoneMinLengthKm6": "លេខទូរស័ព្ទយ៉ាងហោចណាស់ 6 ខ្ទង់",
+  "phoneMinLengthKm9": "លេខទូរស័ព្ទយ៉ាងហោចណាស់ 9 ខ្ទង់",
+  "change": "ប្តូរ",
+  "changePassword": "ប្តូរពាកសម្ងាត់",
+  "logout": "ចាកចេញ",
+  "customerSince": "អតិថិជនចាប់តាំងពី",
+  "choose": "ជ្រើសរើស",
+  "image": "រូបភាព",
+  "save": "រក្សាទុក",
+  "cancel": "បោះបង់",
+  "confirmDelete": "បញ្ចាក់ការលុប",
+  "deleteDescription": "តើអ្នកប្រាកដទេថាអ្នកចង់លុបធាតុនេះ?",
+  "khSpace": ""
 }
